tests/neg/syntax_include_diag_source.baa
// EXPECT: tests/fixtures/neg/inc_bad_expr.baa
// EXPECT: متوقع تعبير

#تضمين "tests/fixtures/neg/inc_bad_expr.baa"

صحيح الرئيسية() {
    إرجع 0.
}
